[gd_scene load_steps=12 format=3 uid="uid://j3l42q2k6473"]

[ext_resource type="Script" path="res://lose_scene.gd" id="1_amajh"]
[ext_resource type="PackedScene" uid="uid://dq7ayqhtdmkh7" path="res://Scenes/background_space.tscn" id="2_fepr7"]
[ext_resource type="AudioStream" uid="uid://cq4c5kuryi3se" path="res://Assets/Audio/choose.ogg" id="2_sbwbk"]
[ext_resource type="FontFile" uid="uid://x474cgkwo2ij" path="res://Assets/Fonts/Matemasie-Regular.ttf" id="3_fgwle"]

[sub_resource type="Animation" id="Animation_jdknx"]
resource_name = "bg moving"
length = 60.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30, 60),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(1, 1), Vector2(0.35, 0.35)]
}

[sub_resource type="Animation" id="Animation_y6tmo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.359999, 0.359999)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7g6kh"]
_data = {
"RESET": SubResource("Animation_y6tmo"),
"bg moving": SubResource("Animation_jdknx")
}

[sub_resource type="Theme" id="Theme_alckx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cax33"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6vvc"]
bg_color = Color(0, 0, 0, 0.439216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jialg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="LoseScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amajh")

[node name="AudioButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sbwbk")

[node name="Background_space" parent="." instance=ExtResource("2_fepr7")]
position = Vector2(951, 514)
scale = Vector2(0.359999, 0.359999)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background_space"]
libraries = {
"": SubResource("AnimationLibrary_7g6kh")
}

[node name="Container" type="Container" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -148.5
offset_right = 287.0
offset_bottom = 148.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.44, 1.44)
pivot_offset = Vector2(278, 85)

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Lost" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.807843, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_fgwle")
theme_override_font_sizes/font_size = 96
text = "YOU LOST!"

[node name="Label" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fgwle")
theme_override_font_sizes/font_size = 20
text = "You were eaten. Press \"Back\" 
to return to the main menu"
horizontal_alignment = 1

[node name="Back" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_alckx")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_fgwle")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_cax33")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6vvc")
theme_override_styles/normal = SubResource("StyleBoxFlat_jialg")
text = "Back"
flat = true

[connection signal="finished" from="AudioButton" to="." method="_on_audio_button_finished"]
[connection signal="mouse_entered" from="Container/VBoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Container/VBoxContainer/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Container/VBoxContainer/Back" to="." method="_on_back_pressed"]
